# cwmem

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  c2.json  evaluate_skill.py  pyproject.toml  textual.md
.autoresearch/: config.json  program.md  results.tsv
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
memory/entries/: entries.jsonl  mem-000001.md  mem-000002.md  mem-000003.md  mem-000004.md  mem-000005.md  mem-000006.md  mem-000007.md  mem-000008.md  mem-000009.md  mem-000010.md  mem-000011.md  mem-000012.md
memory/events/: events.jsonl
memory/graph/: edges.jsonl  nodes.jsonl
memory/manifests/: export-manifest.json
memory/taxonomy/: entity-types.json  relation-types.json  (+1 more)
plans/: PLAN-E1-repo-envelope.md  PLAN-E2-memory-crud-events.md  PLAN-E3-fts-search.md  PLAN-E4-hybrid-search.md  PLAN-E5-knowledge-graph.md  PLAN-E6-sync-workflows.md  PLAN-E7-safety-concurrency.md  PLAN-E8-automation-release.md
tests/: __init__.py  conftest.py  helpers.py  phase2_helpers.py  phase3_helpers.py  phase4_helpers.py  phase6_helpers.py  phase7_helpers.py  test_automation_hooks.py  test_dry_run.py  test_embeddings.py  test_entry_crud.py  test_envelope.py  test_events.py  test_fts.py  test_graph_cli.py  test_gui_api.py  test_gui_cli.py  test_guide.py  test_help_cli.py  test_hybrid_search.py  test_idempotency.py  test_locking.py  test_package_metadata.py  test_plan_apply.py  test_round_trip.py  test_search_cli.py  test_setup_commands.py  test_skill_cli.py  test_sync_export.py  test_sync_import.py  test_tags.py  test_tui_app.py  test_tui_cli.py  test_validate_basic.py  test_validation_errors.py  test_verify.py
(+78 files in other folders)
